# Cownter

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
authentication/: permissions.py  serializers.py  urls.py  views.py
authentication/management/commands/: setup_auth.py
cattle_tracker/: .env.example  AUTH.md  Dockerfile  manage.py  pyproject.toml  requirements.txt  test_basic.py
cattle_tracker/authentication/: permissions.py  serializers.py  tests.py  urls.py  views.py
cattle_tracker/authentication/management/commands/: setup_auth.py
cattle_tracker/cattle_tracker/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
cattle_tracker/herd/: __init__.py  admin.py  apps.py  models.py  serializers.py  stats_views.py  tests.py  urls.py  views.py  viewsets.py
cattle_tracker/herd/migrations/: 0001_initial.py  0002_add_weight_log.py
cattle_tracker/herd/tests/: __init__.py  test_api.py  test_models.py  test_photo_api.py  test_stats_api.py  test_weight_log_api.py
cattle_tracker/herd/tests/fixtures/: __init__.py  image_helpers.py
cattle_tracker/herd/utils/: __init__.py  image_processing.py
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/.storybook/: main.ts  preview.tsx
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: Button.stories.tsx  Button.tsx  ErrorBoundary.tsx  HerdListView.stories.tsx  HerdListView.tsx  (+3 more)
nginx/conf.d/: default.conf
(+34 files in other folders)
