[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cattle-tracker"
version = "0.1.0"
description = "Cattle herd management system"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

[tool.ruff]
target-version = "py312"
extend-select = ["ALL"]
ignore = ["D203", "D212"]  # one-sentence docstring rules
line-length = 100

[tool.ruff.per-file-ignores]
"*/migrations/*" = ["ALL"]
"manage.py" = ["D100"]
"*/settings.py" = ["S105", "S106"]  # Allow hardcoded passwords in settings
"*/tests/*" = ["S101", "D100", "D103"]  # Allow assert statements in tests

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "cattle_tracker.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
]